--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -13,7 +13,7 @@ on:
 jobs:
   build_and_deploy:
     name: Build and Deploy
-    if: github.event_name == 'push' || (github.event_name == 'pull_request' && github.event.acton != 'closed')
+    if: github.event_name == 'push' || githube.event_name == 'workflow_dispatch' || (github.event_name == 'pull_request' && github.event.acton != 'closed')
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
